Configures layout, adds components

--- a/client/public/global.css
+++ b/client/public/global.css
@@ -1,17 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
 
 :root {
-	--background-color: #ffffff;
-	--text-color: #000000;
-	--border-color: #555555;
-	--primary-color: #ff3e00;
+  --background-color: #1a1a1d;
+  --text-color: #ffffff;
+  --border-color: #4e4e50;
+  --primary-color: #c3073f;
 }
 
-html, body {
-	margin: 0;
+html,
+body {
+  margin: 0;
+  background-color: var(--background-color);
 }
 
 body {
-	box-sizing: border-box;
-	font-family: 'Open Sans', sans-serif;
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
