Updates CSS to handle mobile devices, scheme overhaul

--- a/client/public/global.css
+++ b/client/public/global.css
@@ -1,16 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
 
 :root {
-  --background-color: #1a1a1d;
-  --text-color: #ffffff;
-  --border-color: #4e4e50;
-  --primary-color: #c3073f;
+  --background: #fafafa;
+  --primary-text: #212121;
+  --secondary-text: #757575;
+  --dark-primary: #455a64;
+  --light-primary: #cfd8dc;
+  --primary: #607d8b;
+  --accent: #ff5722;
+  --divider: #bdbdbd;
 }
 
 html,
 body {
   margin: 0;
-  background-color: var(--background-color);
+  background-color: var(--background);
 }
 
 body {
